docs: add Chinese Javadoc/DisplayName for PR #89 sources and review fixes
Document PR-changed Java with Chinese Javadoc and test @DisplayName;
keep runtime logs/exceptions English. Apply small review fixes and record
remaining follow-ups in AGENTS §1.3.

Co-authored-by: Cursor <cursoragent@cursor.com>